# literal_cstr

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: show.rs
src/: lib.rs
tests/: test.rs
